obfuscação de email

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 
 	<link rel="stylesheet" type="text/css" href="css/principal.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/animate.css">
 	<link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,900" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 
@@ -64,7 +63,7 @@
 							<a href="https://www.instagram.com/siq_ufrj/?utm_source=ig_profile_share&igshid=xz8n2bv6b476"><i class="fab fa-instagram"></i></a>
 						</div>
 						<div class="col col-lg-1">
-							<a href="mailto:siq@eco.ufrj.br"><i class="fa fa-at"></i></a>
+							<a href="&#109;ai&#108;t&#111;&#58;&#115;&#105;q&#37;40e&#99;o&#46;u&#37;66rj&#46;&#37;62r"><i class="fa fa-at"></i></a>
 						</div>
 					</div>
 				</div>
